--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="icons">
                 <div class="icons-l">
                     <img src="assets/icons/football-787-svgrepo-com.svg" class="icon" alt="Football Icon">
-                    <img src="assets/icons/trophy-svgrepo-com.svg" class="icon" alt="Trophy Icon">
+                    <img src="assets/icons/trophy-svgrepo-com.svg" class="icon" alt="Trophy Icon" onclick="window.location.href='players.html'">
                     <img src="assets/icons/stats-svgrepo-com.svg" class="icon" alt="Stats Icon">
                 </div>
                 <div class="icons-r">
