--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
                     <img src="assets/icons/new-document-svgrepo-com.svg" class="icon" alt="New Document Icon">
                 </div>
             </div>       
+        </div>
     </div>
 </body>
 </html>
