--- a/players.html
+++ b/players.html
@@ -141,6 +141,38 @@
                 text-align: center;
             }
         }
+        .icons {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            width: 100%;
+            margin: 5px 5px 0;
+        }
+        .icon {
+            width: 25px;
+            height: 25px;
+            transition: filter 0.3s, transform 0.3s;
+            filter: brightness(0) invert(40%) sepia(50%) saturate(300%) hue-rotate(100deg);
+        }
+        .icon:hover {
+            filter: brightness(0) invert(100%);
+            transform: scale(1.1);
+        }
+        .icons-l, .icons-r {
+            display: flex;
+            gap: 10px; /* Espaciado entre íconos */
+        }
+        .icons-l {
+            justify-content: flex-start; /* Alinea a la izquierda */
+        }
+        .icons-r{
+            justify-content: flex-end; /* Alinea a la derecha */
+        }
+        .icons-r .icon{
+            width: 30px;
+            height: 30px;
+        }
+
     </style>
 </head>
 <body>
@@ -165,6 +197,23 @@
                         </tbody>
                     </table>
             </div>
+        </div>
+        <div class="icons">
+            <div class="icons">
+                <div class="icons-l">
+                    <a href="index.html">
+                        <img src="assets/icons/football-787-svgrepo-com.svg" class="icon" alt="Football Icon">
+                    </a>
+                    <a href="players.html">
+                        <img src="assets/icons/trophy-svgrepo-com.svg" class="icon" alt="Trophy Icon">
+                    </a>
+                    <img src="assets/icons/stats-svgrepo-com.svg" class="icon" alt="Stats Icon">
+                </div>
+                <div class="icons-r">
+                    <img src="assets/icons/delete-svgrepo-com.svg" class="icon" alt="Delete Icon">
+                    <img src="assets/icons/new-document-svgrepo-com.svg" class="icon" alt="New Document Icon">
+                </div>
+            </div>       
         </div>
     </div>
 </body>
