--- a/players.html
+++ b/players.html
@@ -203,10 +203,10 @@
                     <a href="index.html">
                         <img src="assets/icons/football-787-svgrepo-com.svg" class="icon" alt="Football Icon">
                     </a>
-                    <a href="players.html">
                         <img src="assets/icons/trophy-svgrepo-com.svg" class="icon" alt="Trophy Icon">
+                    <a href="stats.html">
+                        <img src="assets/icons/stats-svgrepo-com.svg" class="icon" alt="Stats Icon">
                     </a>
-                    <img src="assets/icons/stats-svgrepo-com.svg" class="icon" alt="Stats Icon">
                 </div>
                 <div class="icons-r">
                     <img src="assets/icons/delete-svgrepo-com.svg" class="icon" alt="Delete Icon">
